# dl

./: .gitignore  AUDIO_MODULES_README.md  CLAUDE.md  Langevin_Dynamics_(JAX).ipynb  Practice_1_Dense_Networks.ipynb  Practice_2_Convolutional_Networks.ipynb  Practice_3_segmentation.ipynb  Practice_5_Audio (1).ipynb  Practice_5_Audio.ipynb  Prompt_Engineering_for_ImageNet.ipynb  README.md  TASKS_README.md  checkpoint_utils.py  contrastive_data.py  data.py  evaluate_all.py  full_finetuning.py  homework-week12.ipynb  lipsum_finetuning.py  main.ipynb  main.py  ood_eval.py  plot_fronts.py  pretrain.py  pyproject.toml  random_texts.py  run_all.sh  submission.csv  submit.py  supervised.py  task1.py  task2.py  task3.py  task4.py  task5.py  test.ipynb  test.py  test_audio_modules.py  train_byol.py  train_simclr.py  (+3 more)
audio_data/: __init__.py  augmentations.py  dataset.py  transforms.py
audio_models/: __init__.py  contrastive.py  encoders.py  losses.py  supervised.py
audio_utils/: __init__.py  linear_probe.py  visualization.py
results/: ft_model_10_10.json  ft_model_1_10.json  ft_model_2_10.json  ft_model_3_10.json  ft_model_4_10.json  ft_model_5_10.json  ft_model_6_10.json  ft_model_7_10.json  ft_model_8_10.json  ft_model_9_10.json  lipsum_model_0_10.json  lipsum_model_10_10.json  lipsum_model_1_10.json  lipsum_model_2_10.json  lipsum_model_3_10.json  lipsum_model_4_10.json  lipsum_model_5_10.json  lipsum_model_6_10.json  lipsum_model_7_10.json  lipsum_model_8_10.json  lipsum_model_9_10.json
utils/: data.py  lr_finder.py  training.py
wandb/: latest-run
wandb/run-20251010_114935-9yswr924/: run-9yswr924.wandb
wandb/run-20251010_114935-9yswr924/files/: requirements.txt  (+1 more)
