[project]
name = "dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.21.0",
    "clip",
    "datasets>=4.1.0",
    "ftfy>=6.3.1",
    "gpustat>=1.1.1",
    "huggingface>=0.0.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "regex>=2025.9.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "typer>=0.19.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
