[project]
name = "dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.21.0",
    "clip",
    "datasets>=4.1.0",
    "ftfy>=6.3.1",
    "gpustat>=1.1.1",
    "huggingface>=0.0.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "jupyter>=1.1.1",
    "lightning>=2.5.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "pillow>=11.0.0",
    "regex>=2025.9.1",
    "scikit-learn>=1.5.0",
    "torch>=2.8.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "typer>=0.19.1",
    "wandb>=0.18.0",
]

